# redoxify-dataloader

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  search.html  setup.cfg
docs/: index.md  transforms.md
examples/mmtrain/: debug_train.py  redox_config.py  redox_config_yolov8l.py  train.py  yolox_s.py
examples/mmtrain/configs/: ddq_detr.py  yolov8_l.py  yolov8_s.py  yolov8_s_ori.py  yolox_s.py
examples/mmtrain/hook/: __init__.py  dataloader_switch_hook.py
examples/tfrecord_tools/: coco2tfrec_shard.py  create_idx_only.py  detection_data_to_tfrec.py  detection_data_to_tfrec_shard.py  mmloader_test.py  read_record_test.py  redoxloader_test.py  tfrecord2idx
search/: search_index.json
src/redoxify/: GlobalConst.py  RedoxTypes.py
src/redoxify/datablocks/: BoxesBlock.py  DataBlock.py  ImagesBlock.py  VectorsBlock.py  __init__.py
src/redoxify/datasets/: RedoxBaseDataset.py  RedoxDetDataset.py  utils.py
src/redoxify/functionals/: Blur.py  cpu_ops.py  cuda_affine.py  cuda_blur.py  cuda_clahe.py  cuda_hsv.py  cuda_mixup.py  cuda_mosaic.py  cuda_ops.py  utils.py
src/redoxify/pipelines/: PipelineBuilder.py
src/redoxify/readers/: ReaderSpecs.py  TFRecordReader.py  __init__.py
src/redoxify/transforms/: BaseTransform.py  BrightnessContrast.py  DataBlockGrouping.py  DataBlockGroupingTransform.py  Mosaic.py  Pad.py  RandomCropWithBoxes.py  RandomHSVAug.py  Resize.py  __init__.py  (+2 more)
tests/: test_dali_op.py  test_dataset.py  test_dataset_speed.py  test_dataset_visual.py  test_dataset_yolo.py  test_mm_dataset.py  test_redox_op.py
transforms/: index.html
(+16 files in other folders)
