[metadata]
name = redoxify
version = 0.1
license = MIT
description = Redoxify is a data loader based on NVIDIA DALI that efficiently reads and processes various data.
long_description = file: README.rst

classifiers=
   Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.10
install_requires =
    numpy

[options.packages.find]
where=src